--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: 167.88.61.213, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-1.81MB/s(Youtube:不良林), server: 85.208.108.59, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-976.5KB/s(Youtube:不良林), server: 167.88.61.213, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-2.46MB/s(Youtube:不良林), server: 85.208.108.59, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇯🇵 日本-2.83MB/s(Youtube:不良林), server: 85.208.108.59, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 167.88.61.213, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇯🇵 日本-2.02MB/s(Youtube:不良林), server: 85.208.108.59, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-2.75MB/s(Youtube:不良林), server: 85.208.108.59, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 38.68.135.18, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: 38.68.134.85, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.65MB/s(Youtube:不良林), server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 38.68.134.85, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-2.39MB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
