--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.81MB/s(Youtube:不良林), server: 85.208.108.59, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-976.5KB/s(Youtube:不良林), server: 167.88.61.213, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-2.46MB/s(Youtube:不良林), server: 85.208.108.59, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇯🇵 日本-2.75MB/s(Youtube:不良林), server: 85.208.108.59, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇦 加拿大-473.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.02MB/s(Youtube:不良林), server: 85.208.108.59, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇫🇷 法国-1.32MB/s(Youtube:不良林), server: 54.36.174.181, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-1.89MB/s(Youtube:不良林), server: 85.208.108.59, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 38.68.135.18, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: 38.68.134.85, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 38.68.134.85, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 38.68.134.85, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: 38.68.134.85, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-473.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-473.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-473.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-473.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-473.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-473.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-976.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-473.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
